--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -14,4 +14,6 @@
     <string name="tap_to_edit">Tik om te bewerken</string>
     <string name="search">Zoek</string>
     <string name="enter_search_string">Typ een zoekwoord...</string>
+    <string name="player_statistics">Spelerstatistieken</string>
+    <string name="create_new_player">Maak een nieuwe speler aan</string>
 </resources>
