--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="title_activity_start_new_match">Start a new match</string>
     <string name="create_new_player">Create a new player</string>
     <string name="log_in">Log in</string>
+    <string name="log_out">Log out</string>
     <string name="sign_up">Sign up</string>
 
     <!--    activity-start-new-game-->
@@ -45,6 +46,6 @@
     <string name="password_must_contain_letters_and_numbers">Password must include letters and numbers.</string>
     <string name="passwords_do_not_match">Password verification failed.</string>
     <string name="player_creation_failure">Sorry, player creation failed. Please check your internet connection.</string>
-    <string name="player_signed_in">You have succesfully signed in.</string>
+    <string name="player_signed_in">You have successfully signed in.</string>
 
 </resources>
