--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,7 +50,17 @@
     <string name="player_creation_failure">Sorry, player creation failed. Please check your internet connection.</string>
     <string name="player_signed_in">You have successfully signed in.</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!--    select-picture-dialog-fragment-->
+    <string name="choose_color">Choose a color</string>
+    <string-array name="ball_colors">
+        <item>White</item>
+        <item>Red</item>
+        <item>Yellow</item>
+        <item>Green</item>
+        <item>Brown</item>
+        <item>Blue</item>
+        <item>Pink</item>
+        <item>Black</item>
+    </string-array>
 
 </resources>
