--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,4 +65,9 @@
         <item>Black</item>
     </string-array>
 
+    <!--    match-activity-->
+    <string name="list_of_recent_game_events">List of recent game events</string>
+    <string name="end_of_turn">End of turn</string>
+    <string name="foul">Foul</string>
+
 </resources>
