--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -48,4 +48,5 @@
     <string name="list_of_recent_game_events">Overzicht recente spelgebeurtenissen</string>
     <string name="end_of_turn">Einde beurt</string>
     <string name="foul">Fout</string>
+    <string name="undo">Terug</string>
 </resources>
