--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -6,7 +6,7 @@
     <string name="player_1">Speler 1</string>
     <string name="player_2">Speler 2</string>
     <string name="select_player">Kies een speler</string>
-    <string name="max_number_of_frames">Maximum aantal frames</string>
+    <string name="max_number_of_frames">Beste van ...</string>
     <string name="none_selected">Nog niet gekozen</string>
     <string name="tap_to_select">Tik om te kiezen</string>
     <string name="tap_to_edit">Tik om te bewerken</string>
