--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="ok" translatable="false">OK</string>
     <string name="cancel">Cancel</string>
     <string name="image_info">If logged in, tap image to take a new picture.</string>
+    <string name="no_player_selected">No player selected</string>
 
     <!--    activity-start-new-game-->
     <string name="player_1">Player 1</string>
