--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -68,4 +68,5 @@
     <string name="image_info">Indien ingelogd, tik op afbeelding om een nieuwe foto te maken.</string>
     <string name="register">Registreer</string>
     <string name="no_player_selected">Geen speler geselecteerd</string>
+    <string name="remember_me">Vergeet me niet</string>
 </resources>
