--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -69,4 +69,5 @@
     <string name="register">Registreer</string>
     <string name="no_player_selected">Geen speler geselecteerd</string>
     <string name="remember_me">Vergeet me niet</string>
+    <string name="players_loaded">Spelers geladen</string>
 </resources>
